--- a/vietnam/src/main/webapp/assets/css/style.css
+++ b/vietnam/src/main/webapp/assets/css/style.css
@@ -141,15 +141,49 @@ input[type=text]:hover {
   	text-decoration: none;
   	font-size: 17px;
 }
-
-.topnav a:hover {
+.nav-dropdown .nav-dropbtn{
+	color: black;
+  	text-align: center;
+  	padding: 10px 16px;
+  	text-decoration: none;
+  	font-size: 17px;
+}
+.nav-dropdown .nav-dropbtn:hover{
+	background-color: white;
+  	color: #B5E618;
+  	
+}
+.nav-dropdown{
+	float: left;
+}
+.nav-dropdown:hover .nav-dropdown-content{
+	display: block;
+	
+}
+.topnav a:hover  {
   	background-color: white;
   	color: #B5E618;
 }
-
+.nav-dropdown-content{
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+} 
+.nav-dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
 .topnav .icon {
   	display: none;
 }
+
 
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
