--- a/vietnam/src/main/webapp/assets/css/style.css
+++ b/vietnam/src/main/webapp/assets/css/style.css
@@ -1,6 +1,6 @@
 body{
 	margin:0;
-	
+	position: relative;
 }
 * {box-sizing:border-box}
 .mySlides {display:none}
@@ -95,7 +95,7 @@ body{
   	right: 0px;
 	z-index: 1;
 }
-input[type=text] {
+.search input[type=text] {
 	width: 50%;
 	color: white;
     box-sizing: border-box;
@@ -121,100 +121,28 @@ input[type=text]:hover {
 }
 /*end search bar*/
 /* THIS IS START TO STYLE NAVIGATION BAR*/
-.nav{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.topnav {
-
-  	overflow: hidden;
-  	background-color: white;
-   
-  	z-index: 1;
-}
-
-.topnav a {
-  	color: black;
-  	text-align: center;
-  	padding: 10px 16px;
-  	text-decoration: none;
-  	font-size: 17px;
-}
-.nav-dropdown .nav-dropbtn{
-	color: black;
-  	text-align: center;
-  	padding: 10px 16px;
-  	text-decoration: none;
-  	font-size: 17px;
-}
-.nav-dropdown .nav-dropbtn:hover{
-	background-color: white;
-  	color: #B5E618;
-  	
-}
-.nav-dropdown{
-	float: left;
-}
-.nav-dropdown:hover .nav-dropdown-content{
-	display: block;
+.navbar-header, .nav{
 	
+	font-family: 'Nunito Sans', sans-serif;
 }
-.topnav a:hover  {
-  	background-color: white;
-  	color: #B5E618;
-}
-.nav-dropdown-content{
-	display: none;
-	position: absolute;
-	background-color: #f9f9f9;
-    min-width: 160px;
-    margin-bottom: 0px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 0;
-} 
-.nav-dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-.topnav .icon {
-  	display: none;
+.navbar-header a{
+	font-weight: bold;
+	letter-spacing: 10px;
 }
 
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
+.navbar-header a{
+	font-size:30px;
 }
 
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
-}
 
 /* The sticky class is added to the navbar with JS when it reaches its scroll position */
 .sticky {
   	position: fixed;
+  	z-index: 1;
   	top: 0;
   	width: 100%
 }
+
 
 /* THIS IS START TO STYLE NAVIGATION BAR*/
 /*This is style for paragrap of the content*/
